[workspace]
resolver = "2"
members = ["assh", "assh-auth", "assh-connect", "examples"]

[workspace.package]
repository = "https://github.com/lowlevl/assh"
readme = "README.md"
license = "GPL-3.0"
keywords = ["ssh", "server", "client"]
authors = ["Maya the bee <15341887+lowlevl@users.noreply.github.com>"]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
assh = "^0"
assh-auth = "^0"
assh-connect = "^0"

ssh-packet = { version = "0.5.2", features = [
    "futures",
    "digest",
    "signature",
] }
ssh-key = { version = "0.6.1", features = [
    "dsa",
    "rsa",
    "p256",
    "p384",
    "ed25519",
] }

async-compat = "0.2.3"
futures = "0.3.28"
tracing = "0.1.40"

thiserror = "1.0.58"
rand = "0.8.5"

[patch.crates-io]
assh = { path = "assh" }
assh-auth = { path = "assh-auth" }
assh-connect = { path = "assh-connect" }
# ssh-packet = { path = "../ssh-packet" }
