[package]
name = "assh-auth"
description = "An extension to [`assh`] that provides the [`SSH-USERAUTH`] authentication layer."
documentation = "https://docs.rs/assh-auth"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
assh.workspace = true

ssh-packet.workspace = true
ssh-key.workspace = true

tracing.workspace = true
futures.workspace = true
hashbrown = "0.14.3"
enumset = "1.1.3"
