[package]
name = "assh-connect"
description = "An extension to [`assh`] that provides the [`SSH-CONNECT`] service."
documentation = "https://docs.rs/assh-connect"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
assh.workspace = true
ssh-packet.workspace = true

futures.workspace = true
tracing.workspace = true
thiserror.workspace = true

flume = "0.11.0"
rand = "0.8.5"

[dev-dependencies]
rstest = "0.18.2"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }

tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "tracing-log",
] }
