[package]
name = "assh-connect"
description = "An extension to [`assh`] that provides the [`SSH-CONNECT`] service."
documentation = "https://docs.rs/assh-connect"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
assh.workspace = true
ssh-packet.workspace = true

futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true

either.workspace = true
dashmap = "6.0.1"
defer = "0.2.1"
replace_with = "0.1.7"

[dev-dependencies]
sha1 = "0.10.6"
eyre = "0.6.12"

ssh-key.workspace = true
rand = { workspace = true, features = ["min_const_gen"] }

async-compat.workspace = true
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "tracing-log",
    "ansi",
] }
