[package]
name = "assh-connect"
description = "An extension to [`assh`] that provides the `SSH-CONNECT` service."
documentation = "https://docs.rs/assh-connect"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
assh.workspace = true
ssh-packet.workspace = true

futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true

either.workspace = true
defer = "0.2.1"

dashmap = "6.1.0"
flume = "0.11.1"

[dev-dependencies]
sha1 = "0.10.6"
eyre = "0.6.12"

rand = { workspace = true, features = ["small_rng", "min_const_gen"] }

async-compat.workspace = true
tokio = { version = "1.48.0", features = ["full"] }

tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "tracing-log",
    "ansi",
] }
