[package]
name = "assh"
description = "A low-level SSH library handling the transport and key-exchange, not more, not less."
documentation = "https://docs.rs/assh"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait.workspace = true
futures.workspace = true

tracing = "0.1.37"
thiserror = "1.0.49"
futures-time = "3.0.0"
strum = { version = "0.25.0", features = ["derive"] }
securefmt = "0.1.4"

ssh-key = { version = "0.6.1", features = [
    "dsa",
    "rsa",
    "p256",
    "p384",
    "ed25519",
] }
ssh-packet.workspace = true

rand = "0.8.5"
digest = "0.10.7"
hmac = "0.12.1"
signature = "2.1.0"
cipher = "0.4.4"

# Key-exchange algorithms
x25519-dalek = "2.0.0"

# Compression algorithms
libflate = "2.0.0"

# Cipher algorithms
cbc = "0.1.2"
ctr = "0.9.2"
aead = "0.5.2"

des = "0.8.1"
aes = "0.8.3"
aes-gcm = "0.10.3"

# MAC algorithms
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"

[dev-dependencies]
rstest = "0.18.2"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }

tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "tracing-log",
] }
