[package]
name = "assh"
description = "A low-level SSH library handling the transport and key-exchange, not more, not less."
documentation = "https://docs.rs/assh"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures.workspace = true
futures-time = "3.0.0"

either.workspace = true
tracing.workspace = true
thiserror.workspace = true

strum = { version = "0.27.2", features = ["derive"] }
secrecy = "0.10.3"

ssh-key.workspace = true
ssh-packet.workspace = true

rand.workspace = true
digest = "0.10.7"
hmac = "0.12.1"
cipher = "0.4.4"
signature = "2.2.0"

# Key-exchange algorithms
x25519-dalek = { version = "2.0.1", features = ["zeroize"] }

# Compression algorithms
libflate = "2.2.0"

# Cipher algorithms
cbc = "0.1.2"
ctr = "0.9.2"
aead = "0.5.2"

des = "0.8.1"
aes = "0.8.4"
aes-gcm = "0.10.3"

# MAC algorithms
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
rstest = "0.26.1"
async-std = { version = "1.13.2", features = ["attributes", "unstable"] }

tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "tracing-log",
] }
