[package]
name = "assh"
description = "A low-level SSH library handling the transport and key-exchange, not more, not less."
documentation = "https://docs.rs/assh"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures.workspace = true

bytes.workspace = true
either.workspace = true
tracing.workspace = true
thiserror.workspace = true

strum = { version = "0.28.0", features = ["derive"] }
secrecy = "0.10.3"

ssh-key.workspace = true
ssh-packet.workspace = true

rand.workspace = true
signature = "2.2.0" # blocked by `ssh-key`

# Key-exchange algorithms
x25519-dalek = { version = "2.0.1", features = ["zeroize"] } # blocked by `rand`
# Compression algorithms
libflate = "2.2.0"

# Cipher algorithms
cipher = "0.5.2"

cbc = "0.2.1"
ctr = "0.10.1"
aead = "0.6.1"

des = "0.9.0"
aes = "0.9.1"
aes-gcm = "0.11.0"

# MAC algorithms
digest = "0.10.7" # blocked by `signature`
hmac = "0.12.1" # blocked by `digest`

md-5 = "0.10.6" # blocked by `digest`
sha1 = "0.10.7" # blocked by `digest`
sha2 = "0.10.9" # blocked by `digest`

[dev-dependencies]
rstest = "0.26.1"
async-std = { version = "1.13.2", features = ["attributes", "unstable"] }

tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "tracing-log",
] }
