[package]
name = "examples"
version = "0.0.0-dev"
license.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
assh.workspace = true
assh-auth.workspace = true
assh-connect.workspace = true
ssh-packet.workspace = true
ssh-key.workspace = true

futures.workspace = true
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "io-util",
] }

color-eyre = "0.6.2"
clap = { version = "4.5.1", features = ["derive"] }

tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "tracing-log",
] }
rand = "0.8.5"
tokio-util = { version = "0.7.10", features = ["compat"] }
